--- a/styles/main-header.module.css
+++ b/styles/main-header.module.css
@@ -7,3 +7,7 @@
   justify-content: flex-end;
   align-items: center;
 }
+.logo:hover {
+  transform: rotate(45deg);
+  transition: transform 0.3s ease;
+}
